; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_ai_goal.c_BotShutdownGoalAI.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_ai_goal.c_BotShutdownGoalAI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@itemconfig = common dso_local global i32* null, align 8
@levelitemheap = common dso_local global i32* null, align 8
@freelevelitems = common dso_local global i32* null, align 8
@levelitems = common dso_local global i32* null, align 8
@numlevelitems = common dso_local global i64 0, align 8
@MAX_CLIENTS = common dso_local global i32 0, align 4
@botgoalstates = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BotShutdownGoalAI() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @itemconfig, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i32*, i32** @itemconfig, align 8
  %6 = call i32 @FreeMemory(i32* %5)
  br label %7

7:                                                ; preds = %4, %0
  store i32* null, i32** @itemconfig, align 8
  %8 = load i32*, i32** @levelitemheap, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i32*, i32** @levelitemheap, align 8
  %12 = call i32 @FreeMemory(i32* %11)
  br label %13

13:                                               ; preds = %10, %7
  store i32* null, i32** @levelitemheap, align 8
  store i32* null, i32** @freelevelitems, align 8
  store i32* null, i32** @levelitems, align 8
  store i64 0, i64* @numlevelitems, align 8
  %14 = call i32 (...) @BotFreeInfoEntities()
  store i32 1, i32* %1, align 4
  br label %15

15:                                               ; preds = %30, %13
  %16 = load i32, i32* %1, align 4
  %17 = load i32, i32* @MAX_CLIENTS, align 4
  %18 = icmp sle i32 %16, %17
  br i1 %18, label %19, label %33

19:                                               ; preds = %15
  %20 = load i64*, i64** @botgoalstates, align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %20, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @BotFreeGoalState(i32 %27)
  br label %29

29:                                               ; preds = %26, %19
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %1, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %1, align 4
  br label %15

33:                                               ; preds = %15
  ret void
}

declare dso_local i32 @FreeMemory(i32*) #1

declare dso_local i32 @BotFreeInfoEntities(...) #1

declare dso_local i32 @BotFreeGoalState(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
